# cookiecutter-rye

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  pyproject.toml
