[project]
dependencies = [
  "torch>=2.0.1",
  "torchvision>=0.15.2",
  "matplotlib>=3.7.2",
  "albumentations>=1.3.1",
]
description = "{{ cookiecutter.project_name }}"
name = "{{ cookiecutter.project_name }}"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "ruff>=0.0.287",
  "black>=23.7.0",
  "mypy>=1.5.1",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
exclude = "(.git|.mypy_cache|.venv)"
line-length = 110

[tool.isort]
line_length = 110
profile = "black"
