[project]
dependencies = []
description = "{{ cookiecutter.project_name }}"
name = "{{ cookiecutter.project_name }}"
readme = "README.md"
requires-python = ">= 3.10"
version = "0.1.0"
authors = [{ name = "yuvenhol", email = "yuvenhol@gmail.com" }]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "setuptools>=70.2.0",
]

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(filename)s [line:%(lineno)d] - %(message)s"
log_cli_date_format = "%H:%M:%S"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
